src/objects/AF_AgencyEmailAlerts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to send out emails to agency users at each Quarter</description>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3</label>
        <type>Date</type>
    </fields>
    <label>Agency Email Alerts</label>
</CustomObject>